--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ section .title::after{
 .navbar{
     position: fixed;
     width: 100%;
+    background: #fff;
     z-index: 999;
     padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
